--- a/extension/package.json
+++ b/extension/package.json
@@ -1326,6 +1326,91 @@
             "translations"
           ]
         }
+      },
+      {
+        "name": "getGlossary",
+        "displayName": "Get Glossary Terminology",
+        "modelDescription": "This tool returns glossary terminology pairs for a target language (and optional source language, default en-US) from a built-in glossary, based on Business Central terminology and translations. It outputs a JSON array of objects with 'source', 'target', and 'description'. Usage scenarios: (1) Pre-translation session - fetch glossary to instruct the LLM for consistent terminology. (2) Automated suggestion generation - validate/adjust outputs against approved terms. (3) Review/QA - detect and highlight deviations from glossary entries. (4) Bulk alignment or terminology normalization workflows. (5) Cross-language comparison by specifying a non-default sourceLanguageCode.",
+        "tags": [
+          "glossary",
+          "terminology",
+          "translation",
+          "localization",
+          "al",
+          "business-central",
+          "dynamics-365"
+        ],
+        "userDescription": "(beta) Retrieve glossary terminology entries for a specified target language.",
+        "canBeReferencedInPrompt": true,
+        "toolReferenceName": "nab-al-tools-getGlossary",
+        "inputSchema": {
+          "type": "object",
+          "properties": {
+            "targetLanguageCode": {
+              "type": "string",
+              "description": "Target language code for which glossary entries should be returned.",
+              "enum": [
+                "en-US",
+                "cs-cz",
+                "da-dk",
+                "de-at",
+                "de-ch",
+                "de-de",
+                "en-au",
+                "en-ca",
+                "en-gb",
+                "en-nz",
+                "es-es_tradnl",
+                "es-mx",
+                "fi-fi",
+                "fr-be",
+                "fr-ca",
+                "fr-ch",
+                "fr-fr",
+                "is-is",
+                "it-ch",
+                "it-it",
+                "nb-no",
+                "nl-be",
+                "nl-nl",
+                "sv-se"
+              ]
+            },
+            "sourceLanguageCode": {
+              "type": "string",
+              "description": "Optional source language code (default en-US) used as the source terminology column.",
+              "enum": [
+                "en-US",
+                "cs-cz",
+                "da-dk",
+                "de-at",
+                "de-ch",
+                "de-de",
+                "en-au",
+                "en-ca",
+                "en-gb",
+                "en-nz",
+                "es-es_tradnl",
+                "es-mx",
+                "fi-fi",
+                "fr-be",
+                "fr-ca",
+                "fr-ch",
+                "fr-fr",
+                "is-is",
+                "it-ch",
+                "it-it",
+                "nb-no",
+                "nl-be",
+                "nl-nl",
+                "sv-se"
+              ]
+            }
+          },
+          "required": [
+            "targetLanguageCode"
+          ]
+        }
       }
     ]
   },
@@ -1357,7 +1442,8 @@
     "test": "node ./out/test/runTest.js",
     "pretest:coverage": "npm run test-compile && npm run lint",
     "test:coverage": "node ./out/test/runTest-coverage.js",
-    "coverage:report": "npx nyc report --reporter=lcov --reporter=text-summary --check-coverage"
+    "coverage:report": "npx nyc report --reporter=lcov --reporter=text-summary --check-coverage",
+    "verify:glossary": "node ../dev-tools/glossary/verify-glossary.js"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.15.0",
